[package]
edition = "2021"
name = "orne-nft"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.1"
cosmwasm-std = "1.1"
cw2 = "0.15"
cw721 = "0.15"
schemars = "0.8.10"

[dependencies.serde]
default-features = false
features = ["derive"]
version = "1.0"

[dependencies.cw721-base]
features = ["library"]
version = "0.15"
